kubernetes/apps/network/unleashed-voucher-manager/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unleashed-voucher-manager
spec:
  hostnames:
    - voucher.greyrock.io
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: unleashed-voucher-manager
          port: 3000
